# arm_ebm_icml2026_reproduce

./: .gitignore  README.md  REPRODUCTION_BUNDLE.md  pyproject.toml  reproduce_cpu.sh
.trackio/: metadata.json
.trackio/logbook/: README.md  index.html  logbook.json
.trackio/logbook/pages/: index.md
.trackio/logbook/pages/claim-1-exact-arm-ebm-bijection-in-function-space/: page.md
.trackio/logbook/pages/claim-2-soft-bellman-equation-and-implicit-lookahead/: page.md
.trackio/logbook/pages/claim-3-same-nll-minima-and-optimal-teacher-forcing/: page.md
.trackio/logbook/pages/claim-4-ebm-to-arm-kl-error-bound/: page.md
.trackio/logbook/pages/claim-5-conversion-cost-asymmetry/: page.md
.trackio/logbook/pages/conclusion/: page.md
.trackio/logbook/pages/executive-summary/: page.md
outputs/cpu_exact/: complexity.csv  kl_bound_trials.csv  poster_embed.html  report.json  training_history.csv  training_plot.html
repro_arm_ebm/: __init__.py  core.py  run.py
scripts/: register_bundle.py
tests/: test_core.py
