[project]
name = "arm-ebm-icml2026-reproduce"
version = "0.1.0"
description = "Independent finite-sequence reproduction of ARM/EBM equivalence"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
  "trackio>=0.13",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "playwright>=1.40",
  "pytest>=8.0",
]
